# diploma_project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  runs.csv  sweep.sh
evaluation/: arch_table.tex  bootstrap_ci.py  clustering_methods.tex  deta_table.tex  eval_new_data.py  eval_val_quick.csv  eval_val_quick_roi.csv  extract_runs.py  make_table.py  new_data_real_greedy.csv  new_data_synth_equi.csv  new_data_synth_equi_g0.csv  new_data_synth_equi_g1.csv  new_data_synth_unet.csv  new_data_synth_unet_g0.csv  new_data_synth_unet_g1.csv  plot_deta.py  plot_mask_examples.py  presentation.tex  runs.csv  visual_inference_new_data.py
src/: metrics.py  parameters.py  train.py  utils.py
src/dataset/: dataset.py  real_ccp.py  utils.py
src/models/: UNet.py  eUNet.py  utils.py
src/sweep_config/: sweep_real_equi_finetune.yaml  sweep_real_equi_grid.yaml  sweep_real_equi_hparams.yaml  sweep_real_unet_grid.yaml  sweep_synth_equi_grid.yaml  sweep_synth_equi_hparams.yaml  sweep_synth_equi_pretrain.yaml  sweep_synth_unet_grid.yaml
